VkSamplerCreateInfo compareEnable not respected
From the spec:
compareEnable
isVK_TRUE
to enable comparison against a reference value during lookups, orVK_FALSE
otherwise.- If
compareEnable
isVK_TRUE
,compareOp
must be a validVkCompareOp
value
Per my reading of the spec, comparisons should only be enabled and compareOp
used if compareEnable
is VK_TRUE
.
Only the Freedreno driver checks compareEnable
before setting compareOp
. Rest of the drivers disregard compareEnable
and simply use compareOp
.
Is my understanding of the spec correct and this is a bug in Mesa (sans Freedreno)?